2.1.0/_sources/gallery/api/scatter_piecharts.rst.txt


.. _sphx_glr_gallery_api_scatter_piecharts.py:


===================================
Scatter plot with pie chart markers
===================================

This example makes custom 'pie charts' as the markers for a scatter plot.

Thanks to Manuel Metz for the example




.. image:: /gallery/api/images/sphx_glr_scatter_piecharts_001.png
    :align: center





.. code-block:: python


    import numpy as np
    import matplotlib.pyplot as plt

    # first define the ratios
    r1 = 0.2       # 20%
    r2 = r1 + 0.4  # 40%

    # define some sizes of the scatter marker
    sizes = np.array([60, 80, 120])

    # calculate the points of the first pie marker
    #
    # these are just the origin (0,0) +
    # some points on a circle cos,sin
    x = [0] + np.cos(np.linspace(0, 2 * np.pi * r1, 10)).tolist()
    y = [0] + np.sin(np.linspace(0, 2 * np.pi * r1, 10)).tolist()
    xy1 = list(zip(x, y))
    s1 = np.max(xy1)

    x = [0] + np.cos(np.linspace(2 * np.pi * r1, 2 * np.pi * r2, 10)).tolist()
    y = [0] + np.sin(np.linspace(2 * np.pi * r1, 2 * np.pi * r2, 10)).tolist()
    xy2 = list(zip(x, y))
    s2 = np.max(xy2)

    x = [0] + np.cos(np.linspace(2 * np.pi * r2, 2 * np.pi, 10)).tolist()
    y = [0] + np.sin(np.linspace(2 * np.pi * r2, 2 * np.pi, 10)).tolist()
    xy3 = list(zip(x, y))
    s3 = np.max(xy3)

    fig, ax = plt.subplots()
    ax.scatter(range(3), range(3), marker=(xy1, 0),
               s=s1 ** 2 * sizes, facecolor='blue')
    ax.scatter(range(3), range(3), marker=(xy2, 0),
               s=s2 ** 2 * sizes, facecolor='green')
    ax.scatter(range(3), range(3), marker=(xy3, 0),
               s=s3 ** 2 * sizes, facecolor='red')

    plt.show()

**Total running time of the script:** ( 0 minutes  0.021 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: scatter_piecharts.py <scatter_piecharts.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: scatter_piecharts.ipynb <scatter_piecharts.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
